// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PluginCardSkeleton > Snapshot > should match snapshot 1`] = `
<div
  class="h-full"
  data-testid="card"
>
  <div
    class="p-5"
    data-testid="card-content"
  >
    <div
      class="flex items-start gap-3 mb-3"
    >
      <div
        class="h-10 w-10 rounded-xl"
        data-testid="skeleton"
      />
      <div
        class="flex-1 space-y-2"
      >
        <div
          class="h-4 w-3/4"
          data-testid="skeleton"
        />
        <div
          class="flex items-center gap-2"
        >
          <div
            class="h-5 w-20"
            data-testid="skeleton"
          />
          <div
            class="h-4 w-12"
            data-testid="skeleton"
          />
        </div>
      </div>
    </div>
    <div
      class="space-y-2 mb-4"
    >
      <div
        class="h-4 w-full"
        data-testid="skeleton"
      />
      <div
        class="h-4 w-5/6"
        data-testid="skeleton"
      />
      <div
        class="h-4 w-2/3"
        data-testid="skeleton"
      />
    </div>
    <div
      class="flex items-center justify-between pt-2"
    >
      <div
        class="h-4 w-32"
        data-testid="skeleton"
      />
      <div
        class="h-8 w-16"
        data-testid="skeleton"
      />
    </div>
  </div>
</div>
`;

exports[`PluginCardSkeleton > Snapshot > should match snapshot for multiple instances 1`] = `
<div
  class="grid"
>
  <div
    class="h-full"
    data-testid="card"
  >
    <div
      class="p-5"
      data-testid="card-content"
    >
      <div
        class="flex items-start gap-3 mb-3"
      >
        <div
          class="h-10 w-10 rounded-xl"
          data-testid="skeleton"
        />
        <div
          class="flex-1 space-y-2"
        >
          <div
            class="h-4 w-3/4"
            data-testid="skeleton"
          />
          <div
            class="flex items-center gap-2"
          >
            <div
              class="h-5 w-20"
              data-testid="skeleton"
            />
            <div
              class="h-4 w-12"
              data-testid="skeleton"
            />
          </div>
        </div>
      </div>
      <div
        class="space-y-2 mb-4"
      >
        <div
          class="h-4 w-full"
          data-testid="skeleton"
        />
        <div
          class="h-4 w-5/6"
          data-testid="skeleton"
        />
        <div
          class="h-4 w-2/3"
          data-testid="skeleton"
        />
      </div>
      <div
        class="flex items-center justify-between pt-2"
      >
        <div
          class="h-4 w-32"
          data-testid="skeleton"
        />
        <div
          class="h-8 w-16"
          data-testid="skeleton"
        />
      </div>
    </div>
  </div>
  <div
    class="h-full"
    data-testid="card"
  >
    <div
      class="p-5"
      data-testid="card-content"
    >
      <div
        class="flex items-start gap-3 mb-3"
      >
        <div
          class="h-10 w-10 rounded-xl"
          data-testid="skeleton"
        />
        <div
          class="flex-1 space-y-2"
        >
          <div
            class="h-4 w-3/4"
            data-testid="skeleton"
          />
          <div
            class="flex items-center gap-2"
          >
            <div
              class="h-5 w-20"
              data-testid="skeleton"
            />
            <div
              class="h-4 w-12"
              data-testid="skeleton"
            />
          </div>
        </div>
      </div>
      <div
        class="space-y-2 mb-4"
      >
        <div
          class="h-4 w-full"
          data-testid="skeleton"
        />
        <div
          class="h-4 w-5/6"
          data-testid="skeleton"
        />
        <div
          class="h-4 w-2/3"
          data-testid="skeleton"
        />
      </div>
      <div
        class="flex items-center justify-between pt-2"
      >
        <div
          class="h-4 w-32"
          data-testid="skeleton"
        />
        <div
          class="h-8 w-16"
          data-testid="skeleton"
        />
      </div>
    </div>
  </div>
</div>
`;
